# glucose_model_backend

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
data/: 112_0_WISDM.csv  113_0_WISDM.csv
migrations/: env.py
migrations/versions/: 2026_05_02_1701-2c69d6e7b136_.py
model/: age_scaler.pkl  cfg.json
nginx/: nginx.conf
scripts/: seed_wisdm_patients.py
src/: config.py  main.py
src/database/: __init__.py  database_helper.py
src/glucose_predictor/: __init__.py  predictor.py  preprocessing.py  schemas.py
src/models/: user.py
src/routers/: __init__.py
src/routers/auth/: dependencies.py  router.py
src/routers/doctors/: __init__.py  router.py
src/routers/notes/: __init__.py  router.py
src/routers/predictions/: __init__.py  router.py
src/schemas/: glucose.py  pagination.py  user.py
src/services/: predictor_service.py
src/utils/: security.py
