[project]
name = "backend"
version = "0.1.0"
description = "backend for glocouse level prediction model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.11",
]

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B", "SIM", "FAST"]
